@@ -1,0 +1,4 @@
+<div xmlns="http://www.w3.org/1999/xhtml"
+     xmlns:xi="http://www.w3.org/2001/XInclude">
+  <xi:include href="xinclude${1+1}.pt" />
+</div>
