@@ -1,0 +1,3 @@
+<div xmlns="http://www.w3.org/1999/xhtml">
+  <span>Hello, world!</span>
+</div>
