@@ -1,0 +1,6 @@
+<div xmlns="http://www.w3.org/1999/xhtml"
+     xmlns:py="http://genshi.edgewall.org"
+     xmlns:xi="http://www.w3.org/2001/XInclude">
+  <xi:include href="xinclude${4}.pt" />
+  ${greeting('world')}
+</div>
