@@ -1,0 +1,7 @@
+<div xmlns="http://www.w3.org/1999/xhtml"
+     xmlns:py="http://genshi.edgewall.org"
+     py:strip="">
+  <p py:def="greeting(name)" class="greeting">
+    Hello, ${name}!
+  </p>
+</div>
